less/style.less
@font-face {
    font-family: 'Jesse James';
    font-style: normal;
    font-weight: normal;
    src: url(/fonts/JesseJames.ttf);
}

@font-face {
    font-family: 'Playfair';
    font-style: normal;
    font-weight: normal;
    src: url(/fonts/Playfair.ttf);
}

@font-face {
    font-family: 'Playfair';
    font-style: italic;
    font-weight: bold;
    src: url(/fonts/Playfair-BoldItalic.ttf);
}

@font-face {
    font-family: 'Victorian Parlor Vintage';
    font-style: normal;
    font-weight: normal;
    src: url(/fonts/VictorianParlorVintage.ttf);
}

body, html {
  color: #4f401c;
  font-family: 'Playfair';
  margin: 0;
  min-width: 480px;
  padding: 0;
  width: 100%;
}
html {
  box-sizing: border-box;
}
body {
  font-size: 62.5%;
}
*, *:before, *:after {
  box-sizing: inherit;
}

a {
  color: #4f401c;
}

header {
  background-color: #4f401c;
  color: white;
  height: 80px;
  padding: 8px;
  position: fixed;
  width: 100%;
  z-index: 1;
}

#brand {
  vertical-align: top;
}

#brand > a > img {
  height: 64px;
}

#brand_name {
  display: none;
}

#book_now {
  background-color: #93b4e2;
  border: none;
  border-radius: 12px;
  color: white;
  float: right;
  font-family: 'Playfair';
  font-size: 1.5rem;
  font-style: italic;
  font-weight: bold;
  margin: 8px 0 8px 16px;
  padding: 8px 16px;
  text-decoration: none;
  transition: all 0.23s ease-in-out 0s;
}

#book_now:hover {
  background-color: #6384c2;
}

#menu {
  float: right;
  list-style: none;
  padding: 0;
  margin-right: -8px;
  text-align: right;
}

#menu::before {
  color: white;
  content: '\2261';
  cursor: pointer;
  font-size: 4rem;
  line-height: 32px;
  padding: 8px;
}

#menu:hover::before {
  background-color: #4f401c;
}

#menu:hover > li {
  background-color: #4f401c;
  display: block;
}

#menu > li {
  display: none;
  font-family: 'Jesse James';
  font-size: 1.4rem;
  padding: 8px 0;
  transition: background-color 200ms;
}

#menu > li:last-child {
  border-right: 0;
}

#menu > li > a {
  color: white;
  cursor: pointer;
  display: inline-block;
  text-decoration: none;
  margin: 0 12px;
  padding: 8px;
}

#menu > li > a:hover {
  text-decoration: underline;
}

section > h1 {
  text-align: center;
  font-family: 'Jesse James';
  font-size: 2rem;
  margin: 24px 0;
}

section > h1 > .h1-quote {
  font-family: 'Playfair';
  margin: 0 2px 0 -4px;
}

section > h2 {
  text-align: center;
  font-size: 1.6rem;
  margin: 32px 0;
}

section > p {
  font-size: 1.4rem;
  line-height: 1.5;
  margin: 0 auto;
  max-width: 804px;
  text-align: center;
}

section > p > a {
  color: inherit;
  text-decoration: underline;
  font-size: 1.4rem;
  line-height: 1.5;
}

#top {
  background-image: url('/img/img_header.jpg');
  background-position: 60% 65%;
  background-repeat: no-repeat;
  background-size: 200%;
  color: white;
  height: 464px;
}

#lead {
  font-size: 1.8rem;
  line-height: 464px;
  text-align: center;
}

#first_letter {
  font-size: 2.7rem;
  font-style: italic;
  font-weight: bold;
}

.icon-wrapper {
  vertical-align: middle;
}

.icon-wrapper > img {
  display: inline-block;
  height: 48px;
  margin-right: 16px;
  vertical-align: middle;
}

.icon-wrapper > .icon-description {
  display: inline-block;
  font-size: 1rem;
  font-style: italic;
  font-weight: bold;
  max-width: 128px;
  vertical-align: middle;
}

#icons_nobg {
  margin: 16px 0;
}

#icons_nobg > .icon-wrapper {
  display: inline-block;
  padding: 16px;
  width: ~"calc(50% - 2px)";
}

#icons_bg {
  background-color: #4f401c;
}

#icons_bg > .icon-wrapper-bg {
  background-position: 0% 50%;
  background-size: cover;
  display: inline-block;
  height: 208px;
  vertical-align: top;
  width: 100%;
}

#icons_bg > .icon-wrapper-bg > .icon-wrapper {
  color: white;
  height: 80px;
  margin: 64px 0;
  text-align: center;
}

#icons_bg > #icon_wrapper_bg_valkyrie > .icon-wrapper {
  color: white;
  height: 116px;
  margin: 46px 0;
  text-align: center;
}

#icons_bg > #icon_wrapper_bg_valkyrie > .icon-wrapper > img {
  height: 100px;
}

#icons_bg > .icon-wrapper-bg > .icon-wrapper > .icon-description {
  font-size: 1.4rem;
  max-width: 192px;
  text-align: left;
}

#icon_wrapper_bg_map {
  background-image: url('/img/img_explore.jpg');
}

#icon_wrapper_bg_valkyrie {
  background-image: url('/img/img_torontonian.jpg');
}

#icon_wrapper_bg_evan {
  background-image: url('/img/img_save.jpg');
}

#coming_soon {
  text-align: center;
  font-family: 'Victorian Parlor Vintage';
  font-size: 3.6rem;
  margin: 32px 0;
  transform: rotate(-15deg);
}

#cant_wait {
  font-size: 1.5rem;
  margin-top: 96px;
  text-align: center;
}

#video_wrapper {
  margin: 32px 0;
  text-align: center;
}

#iframe_wrapper {
	position: relative;
	padding-bottom: 56.25%; /* 16:9 */
	padding-top: 25px;
	height: 0;
}
#iframe_wrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

#previewday {
  font-size: 3.6rem;
  font-family: 'Victorian Parlor Vintage';
  text-align: center;
  margin-bottom: 10px;
}

#tickettailor {
  vertical-align: middle;
}

#map_wrapper {
  background-color: #d7b271;
  padding: 16px;
  text-align: right;
}

#map_wrapper > p > span {
  font-size: 1.4rem;
}

#map_wrapper > p {
  display: inline-block;
  font-size: 1.2rem;
  padding-right: 16px;
  text-align: right;
  vertical-align: bottom;
}

#signup {
  background-color: #4f401c;
  color: white;
  padding: 16px;
}

footer {
  color: #4f401c;
  font-family: 'Playfair';
  font-size: 1.5rem;
  padding: 16px;
}

footer ul {
  list-style: none;
}

footer > ul {
  padding-left: 16px;
}

footer > ul > li {
  padding-bottom: 32px;
}

footer > ul > li > ul {
  padding-left: 32px;
}

footer > ul > li > ul > li {
  margin: 8px 0;
}

#copyright {
  font-family: 'Victorian Parlor Vintage';
  text-align: center;
}

#bibliography {
  font-size: 1.2rem;
}

#bibliography > ul {
  line-height: 1.6;
}

@media only screen and (min-width: 720px) {
  #brand_name {
    display: inline-block;
  }

  #top {
    background-position: 60% 80%;
    background-size: 150%;
  }

  #lead {
    font-size: 2.8rem;
  }

  #first_letter {
    font-size: 4.2rem;
  }

  .icon-wrapper > img {
    height: 64px;
    margin-right: 24px;
  }

  .icon-wrapper > .icon-description {
    font-size: 1.4rem;
    max-width: 192px;
  }

  #iframe_wrapper {
    height: 405px;
    margin: 0 auto;
  	padding: 0;
    position: static;
    width: 720px;
  }
  #iframe_wrapper iframe {
  	position: static;
  }

  #coming_soon_wrapper {
    margin: 32px 0;
  }
}
@media only screen and (min-width: 1024px) {
  #top {
    background-size: cover;
  }

  #lead {
    font-size: 4rem;
  }

  #first_letter {
    font-size: 6rem;
  }

  #menu {
    margin-right: 0;
    text-align: left;
  }

  #menu::before {
    content: none;
  }

  #menu > li {
    border-right: 1px solid #4f401c;
    display: inline-block;
    font-family: 'Jesse James';
    font-size: 1.6rem;
    padding: 0;
    transition: background-color 200ms;
  }

  #menu:hover > li {
    display: inline-block;
  }

  footer > ul > li {
    display: inline-block;
    vertical-align: top;
    width: 33%;
  }

  #coming_soon_wrapper {
    display: inline-block;
    vertical-align: top;
    width: ~"calc(100% - 320px)";
    margin: 32px 0;
  }

  #map_wrapper {
    background-color: white;
    display: inline-block;
    padding: 0;
    text-align: left;
    width: 312px;
    margin: 32px 0px 0 0px;
  }

  #map_wrapper > p {
    width: 100%;
  }

  #map_wrapper > a > img {
    margin-bottom: 16px;
  }
}
@media only screen and (min-width: 1280px) {
  #icons_nobg > .icon-wrapper {
    width: ~"calc(25% - 2px)";
  }

  #icons_bg > .icon-wrapper-bg {
    width: ~"calc(33.33% - 1px)";
  }

  #cant_wait {
    font-size: 1.8rem;
    margin-top: 128px;
  }

  #icons_bg > .icon-wrapper-bg {
    background-position: 0% 25%;
  }

  #map_wrapper {
    margin: 32px 0px 0 0px;
  }

  #coming_soon_wrapper {
    margin: 32px -32px;
  }
}

